Fix for deck viewer on mobile.

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header {
     margin: 0 auto;
     border-radius: 10px 10px 10px 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    min-width: 1000px;
 }
 
 a {
@@ -174,7 +175,8 @@ legend {
     margin-right: 20px;
     border-radius: 10px 10px 10px 10px;
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.3);
-    width: 50%
+    width: 50%;
+    min-width: 1000px;
 }
 
 .panel-full {
@@ -437,6 +439,7 @@ body.dark-mode {
     position: relative;
     width: 110%;
     min-height: 513px;
+    /* min-width: 1000px; */
 }
 
 .deck-list-right-image {
